--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -27,3 +27,5 @@ SRC_DISTRIBUTE_LICENSES += "FLTK"
 
 LAYER_PATH_meta-installer = "${LAYERDIR}"
 
+KERNEL_CLASSES_append = "${@bb.utils.contains('DISTRO_FEATURES', 'installer-support', ' installer_support_kernel', '', d)}"
+IMAGE_CLASSES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'installer-support', ' installer_support_image', '', d)}"
