installer.conf: enlarge extra space of rootfs to fix mount source image failed
While multiple targets, mount source image failed.
...
|09:10:25,000 INFO program: Running... mount -t auto -o ro /dev/loop3
/media/source ...infinite timeout
|09:10:25,109 DEBUG program: Return code: 32
...

Tweak extra space of rootfs (+100MB) could fix the issue.

Signed-off-by: Hongxu Jia <hongxu.jia@windriver.com>

--- a/conf/distro/installer.conf
+++ b/conf/distro/installer.conf
@@ -39,3 +39,5 @@ HOSTTOOLS_append = " tac"
 MACHINE_FEATURES_append = " efi pcbios"
 
 UVESA_MODE = "1024x768-32"
+
+IMAGE_ROOTFS_EXTRA_SPACE_append_pn-wrlinux-image-installer =" + 102400"
